fix: remove horizontal scroll

--- a/src/app/stats/page.module.css
+++ b/src/app/stats/page.module.css
@@ -95,7 +95,7 @@
 
 .graphContainer {
   display: flex;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .weeksContainer {
